--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    return dict(m_values = list(map(lambda m_value: m_value,neighbors)),)"
+    "    return dict(m_values = list(map(lambda m_value: neighbor['x'],neighbors)),)"
    ]
   },
   {
