--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    return dict(m_values = list(map(lambda m_value: m_value,neighbors)),)"
+    "    return dict(m_values = list(map(lambda m_value: m_value,m_values)),\n",
+    "                rss_values)"
    ]
   },
   {
