Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    return dict(m_values = list(map(lambda m_value: m_value,m_values)),\n",
-    "                rss_values = list(map(lambda rss_value: round(sum(squared_errors(x_values, y_values, m_values, b)), 2))))"
+    "                rss_values = list(map(lambda rss_value: round(sum(squared_errors(x_values, y_values, m_values, b)), 2),rss_values)))"
    ]
   },
   {
