Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    return dict(m_values = list(map(lambda m_value: m_value,m_values)),\n",
-    "                rss_values = residual_sum_squares(x_values, y_values, m_values, b))"
+    "                rss_values = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_values, b),m_val)"
    ]
   },
   {
