--- a/index.ipynb
+++ b/index.ipynb
@@ -317,9 +317,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "cells": {
+          "align": [
+           "left",
+           "left",
+           "left",
+           "left",
+           "left"
+          ],
+          "fill": {
+           "color": "#EDFAFF"
+          },
+          "line": {
+           "color": "#7D7F80"
+          },
+          "values": [
+           [
+            0.8,
+            0.9,
+            1,
+            1.1,
+            1.2,
+            1.3,
+            1.4,
+            1.5,
+            1.6,
+            1.7,
+            1.8
+           ],
+           [
+            64693.76669999998,
+            45559.96669999998,
+            30626.166699999987,
+            19892.36669999999,
+            13358.5667,
+            11024.766700000004,
+            12890.96670000001,
+            18957.166700000016,
+            29223.36670000002,
+            43689.566700000025,
+            62355.76670000004
+           ]
+          ]
+         },
+         "header": {
+          "align": [
+           "left",
+           "left",
+           "left",
+           "left",
+           "left"
+          ],
+          "fill": {
+           "color": "#a1c3d1"
+          },
+          "line": {
+           "color": "#7D7F80"
+          },
+          "values": [
+           "M values",
+           "RSS values"
+          ]
+         },
+         "type": "table",
+         "uid": "612f6b58-8351-11e9-81b8-116be6612965"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"230b4ab1-c410-489c-941b-16ae0b2c1870\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"230b4ab1-c410-489c-941b-16ae0b2c1870\", [{\"cells\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#EDFAFF\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8], [64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025, 62355.76670000004]]}, \"header\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#a1c3d1\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [\"M values\", \"RSS values\"]}, \"type\": \"table\", \"uid\": \"61327e4c-8351-11e9-81b8-116be6612965\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"230b4ab1-c410-489c-941b-16ae0b2c1870\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"230b4ab1-c410-489c-941b-16ae0b2c1870\", [{\"cells\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#EDFAFF\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8], [64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025, 62355.76670000004]]}, \"header\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#a1c3d1\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [\"M values\", \"RSS values\"]}, \"type\": \"table\", \"uid\": \"61327e4c-8351-11e9-81b8-116be6612965\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cost_chart = rss_values(budgets, revenues, scaled_m_values, b_value)\n",
     "if cost_chart: \n",
@@ -336,9 +420,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "651e09ea-8351-11e9-81b8-116be6612965",
+         "x": [
+          0.1,
+          0.2,
+          0.3,
+          0.4,
+          0.5,
+          0.6,
+          0.7,
+          0.8,
+          0.9,
+          1,
+          1.1,
+          1.2,
+          1.3,
+          1.4,
+          1.5,
+          1.6,
+          1.7
+         ],
+         "y": [
+          316230.36669999996,
+          267696.56669999997,
+          223362.76669999998,
+          183228.96669999996,
+          147295.16669999994,
+          115561.36669999997,
+          88027.56669999998,
+          64693.76669999998,
+          45559.96669999998,
+          30626.166699999987,
+          19892.36669999999,
+          13358.5667,
+          11024.766700000004,
+          12890.96670000001,
+          18957.166700000016,
+          29223.36670000002,
+          43689.566700000025
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"0eb6e57d-ab5c-4ee9-9cff-62d0733aa1d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0eb6e57d-ab5c-4ee9-9cff-62d0733aa1d7\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7], \"y\": [316230.36669999996, 267696.56669999997, 223362.76669999998, 183228.96669999996, 147295.16669999994, 115561.36669999997, 88027.56669999998, 64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025], \"type\": \"scatter\", \"uid\": \"65292df2-8351-11e9-81b8-116be6612965\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"0eb6e57d-ab5c-4ee9-9cff-62d0733aa1d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0eb6e57d-ab5c-4ee9-9cff-62d0733aa1d7\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7], \"y\": [316230.36669999996, 267696.56669999997, 223362.76669999998, 183228.96669999996, 147295.16669999994, 115561.36669999997, 88027.56669999998, 64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025], \"type\": \"scatter\", \"uid\": \"65292df2-8351-11e9-81b8-116be6612965\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from plotly.offline import iplot, init_notebook_mode\n",
     "init_notebook_mode(connected=True)\n",
