--- a/index.ipynb
+++ b/index.ipynb
@@ -557,11 +557,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 1.6, 'slope': 123687.66666691954}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope_at(budgets, revenues, 1.6, 133.33333333333326)"
    ]
@@ -586,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, it seems pretty accurate.  When the curve is steeper and downwards at $m = 6$, the slope is around -290,000.  And at $m = 1.3$ with our cost curve pointing upwards yet flatter, our slope is around 120,000. "
+    "As you can see, it seems pretty accurate.  When the curve is steeper and downwards at $m = 0.6$, the slope is around -290,000.  And at $m = 1.3$ with our cost curve pointing upwards yet flatter, our slope is around 120,000. "
    ]
   },
   {
