--- a/index.ipynb
+++ b/index.ipynb
@@ -633,7 +633,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m1 = m\n",
-    "    \n",
+    "    m1 = learning_rate * cost_curve_slope + m\n",
     "    return learning_rate * cost_curve_slope + m"
    ]
   },
