Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m1 = learning_rate * cost_curve_slope + m\n",
-    "    return m1"
+    "    return learning_rate * cost_curve_slope + m"
    ]
   },
   {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "1.4936476666667913"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
