Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,8 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m1 = learning_rate * cost_curve_slope + m\n",
-    "    return m = m"
+    "    m = m1\n",
+    "    return m"
    ]
   },
   {
