--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m1 = learning_rate * cost_curve_slope + m\n",
     "    m = m1\n",
-    "    return m"
+    "    return m1"
    ]
   },
   {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "1.4936476666667913"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
