--- a/index.ipynb
+++ b/index.ipynb
@@ -625,16 +625,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m1 = learning_rate * cost_curve_slope + m\n",
-    "    m = m1\n",
-    "    return m1"
+    "    m = learning_rate * cost_curve_slope + m\n",
+    "    return m"
    ]
   },
   {
