--- a/index.ipynb
+++ b/index.ipynb
@@ -625,14 +625,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m = learning_rate * cost_curve_slope + m\n",
+    "    m = -learning_rate * cost_curve_slope + m\n",
     "    return m"
    ]
   },
@@ -645,16 +645,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8656876666664903"
+       "1.5343123333335096"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
