--- a/index.ipynb
+++ b/index.ipynb
@@ -632,7 +632,8 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m = -learning_rate * cost_curve_slope + m\n",
+    "    m1 = -learning_rate * cost_curve_slope + m\n",
+    "    m= m1\n",
     "    return m"
    ]
   },
