--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m1 = -learning_rate * cost_curve_slope + m\n",
     "    m= m1\n",
-    "    return m"
+    "    return m1"
    ]
   },
   {
@@ -646,31 +646,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.5343123333335096"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "current_slope = slope_at(budgets, revenues, 1.7, 133.33333333333326)['slope']\n",
     "updated_m(1.7, .000001, current_slope)\n",
     "# 1.5343123333335096\n",
     "\n",
-    "#current_slope = slope_at(budgets, revenues, 1.534, 133.33333333333326)['slope']\n",
-    "#updated_m(1.534, .000001, current_slope)\n",
+    "current_slope = slope_at(budgets, revenues, 1.534, 133.33333333333326)['slope']\n",
+    "updated_m(1.534, .000001, current_slope)\n",
     "# 1.43803233333338\n",
     "\n",
-    "#current_slope = slope_at(budgets, revenues, 1.438, 133.33333333333326)['slope']\n",
-    "#updated_m(1.438, .000001, current_slope)\n",
+    "current_slope = slope_at(budgets, revenues, 1.438, 133.33333333333326)['slope']\n",
+    "updated_m(1.438, .000001, current_slope)\n",
     "# 1.3823523333332086"
    ]
   },
