--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -632,7 +632,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m_update = -learning_rate * cost_curve_slope + m\n",
+    "    m1 = -learning_rate * cost_curve_slope + m\n",
     "    m= m1\n",
     "    return m1"
    ]
@@ -646,20 +646,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.3823523333332086"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "current_slope = slope_at(budgets, revenues, 1.7, 133.33333333333326)['slope']\n",
     "updated_m(1.7, .000001, current_slope)\n",
