--- a/index.ipynb
+++ b/index.ipynb
@@ -632,9 +632,9 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m_update = -learning_rate * cost_curve_slope + m\n",
-    "    m= m1\n",
-    "    return m1"
+    "    m_updated = -learning_rate * cost_curve_slope + m\n",
+    "    m= m_update\n",
+    "    return m_updated"
    ]
   },
   {
