Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -633,7 +633,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m_updated = -learning_rate * cost_curve_slope + m\n",
-    "    m= m_update\n",
+    "    m= m_updated\n",
     "    return m_updated"
    ]
   },
@@ -690,7 +690,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    pass"
+    "    step_list = []\n",
+    "    "
    ]
   },
   {
