--- a/index.ipynb
+++ b/index.ipynb
@@ -691,7 +691,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
-    "    "
+    "    for "
    ]
   },
   {
