Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -691,7 +691,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
-    "    for "
+    "    for x_value, y_value in x_values, y_values:\n",
+    "        "
    ]
   },
   {
