--- a/index.ipynb
+++ b/index.ipynb
@@ -692,7 +692,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
     "    for x_value, y_value in x_values, y_values:\n",
-    "        step_list.append({})"
+    "        step_list.append({'m'=})"
    ]
   },
   {
