Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -692,7 +692,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
     "    for x_value, y_value in x_values, y_values:\n",
-    "        step_list.append({'m'= updated_m(m, learning_rate, cost_curve_slope)})"
+    "        step_list.append({'m'= updated_m(current_m, learning_rate, cost_curve_slope)})"
    ]
   },
   {
