--- a/index.ipynb
+++ b/index.ipynb
@@ -691,6 +691,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
+    "    cost_curve_slope = \n",
     "    for x_value, y_value in x_values, y_values:\n",
     "        step_list.append({'m'= updated_m(current_m, learning_rate, cost_curve_slope)})"
    ]
