Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -691,8 +691,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
-    "    cost_curve_slope = slope_at(x_values, y_values, 1.7, 133.33333333333326)['slope']\n",
     "    for x_value, y_value in x_values, y_values:\n",
+    "        cost_curve_slope = slope_at(x_value, y_value, 1.7, 133.33333333333326)['slope']\n",
     "        step_list.append({'m'= updated_m(current_m, learning_rate, cost_curve_slope)})"
    ]
   },
