--- a/index.ipynb
+++ b/index.ipynb
@@ -694,7 +694,7 @@
     "    for x_value, y_value in x_values, y_values:\n",
     "        current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
     "        cost_curve_slope = slope_at(x_value, y_value, 1.7, 133.33333333333326)['slope']\n",
-    "        step_list.append({'m'= updated_m(current_m, learning_rate, cost_curve_slope)})"
+    "        step_list.append({'m'= current_m, 'rss'})"
    ]
   },
   {
