--- a/index.ipynb
+++ b/index.ipynb
@@ -689,9 +689,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
+    "def gradient_descent(x_values, x_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
-    "    for x_value, y_value in budgets, revenues:\n",
+    "    for x_value, y_value in x_values, x_values:\n",
     "        current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
     "        cost_curve_slope = slope_at(x_value, y_value, 1.7, 133.33333333333326)['slope']\n",
     "        step_list.append({'m': current_m, 'rss': rss_values(x_values, y_values, current_m, b), 'slope': cost_curve_slope})\n",
