--- a/index.ipynb
+++ b/index.ipynb
@@ -690,9 +690,9 @@
     "    step_list = []\n",
     "    for x_value in x_values:\n",
     "        for y_value in y_values:\n",
-    "            for m in range\n",
-    "            cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
-    "            current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
+    "            for i in range(steps):\n",
+    "                cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
+    "                current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
     "            step_list.append({'m': current_m, 'rss': rss_values(x_values, y_values, current_m, b), 'slope': cost_curve_slope})\n",
     "    return step_list"
    ]
