--- a/index.ipynb
+++ b/index.ipynb
@@ -682,9 +682,9 @@
     "    for x_value in x_values:\n",
     "        for y_value in y_values:\n",
     "            for i in range(steps):\n",
-    "                cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
+    "                cost_curve_slope = slope_at(x_value, y_value, current_m, b)['slope']\n",
     "                current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
-    "                rss_value = rss_values(x_values, y_values, current_m, b)['rss']\n",
+    "                rss_value = rss_values(x_value, y_value, current_m, b)['rss']\n",
     "                step_list.append({'m': current_m, 'rss': rss_value, 'slope': cost_curve_slope})\n",
     "    return step_list"
    ]
