Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
     "    step_list = []\n",
     "    for x_value in x_values:\n",
     "        for y_value in y_values:\n",
-    "            #for i in range(steps):\n",
+    "            for i in range(steps):\n",
     "                cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "                current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
     "                rss_value = residual_sum_squares(x_values, y_values, current_m, b)\n",
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -723,10 +723,203 @@
        "  'slope': -12106.752547970245},\n",
        " {'m': 1.295819734387769,\n",
        "  'rss': 11038.209831325046,\n",
-       "  'slope': -7021.916477824561}]"
+       "  'slope': -7021.916477824561},\n",
+       " {'m': 1.299892445944897,\n",
+       "  'rss': 11025.020590634533,\n",
+       "  'slope': -4072.711557128059},\n",
+       " {'m': 1.302254618648021, 'rss': 11020.562895703, 'slope': -2362.172703124088},\n",
+       " {'m': 1.3036246788157584,\n",
+       "  'rss': 11019.051243197406,\n",
+       "  'slope': -1370.0601677373925},\n",
+       " {'m': 1.3044193137131512,\n",
+       "  'rss': 11018.535714614647,\n",
+       "  'slope': -794.6348973928252},\n",
+       " {'m': 1.3048802019536194,\n",
+       "  'rss': 11018.358225765134,\n",
+       "  'slope': -460.88824046819354},\n",
+       " {'m': 1.3051475171331002,\n",
+       "  'rss': 11018.296160796273,\n",
+       "  'slope': -267.3151794806472},\n",
+       " {'m': 1.3053025599370993,\n",
+       "  'rss': 11018.273914663236,\n",
+       "  'slope': -155.04280399909476},\n",
+       " {'m': 1.3053924847635243,\n",
+       "  'rss': 11018.2656379271,\n",
+       "  'slope': -89.92482642497635},\n",
+       " {'m': 1.3054446411628304,\n",
+       "  'rss': 11018.262393613624,\n",
+       "  'slope': -52.1563993061136},\n",
+       " {'m': 1.3054748918744552,\n",
+       "  'rss': 11018.261035415284,\n",
+       "  'slope': -30.25071162483073},\n",
+       " {'m': 1.3054924372871026,\n",
+       "  'rss': 11018.260423766826,\n",
+       "  'slope': -17.545412647450576},\n",
+       " {'m': 1.305502613626413,\n",
+       "  'rss': 11018.260128252972,\n",
+       "  'slope': -10.17633931041928},\n",
+       " {'m': 1.3055085159033295,\n",
+       "  'rss': 11018.25997678403,\n",
+       "  'slope': -5.902276916458504},\n",
+       " {'m': 1.3055119392238337,\n",
+       "  'rss': 11018.259895636189,\n",
+       "  'slope': -3.4233205042255577},\n",
+       " {'m': 1.3055139247497207,\n",
+       "  'rss': 11018.259850825718,\n",
+       "  'slope': -1.9855258869938552},\n",
+       " {'m': 1.3055150763547498,\n",
+       "  'rss': 11018.259825594329,\n",
+       "  'slope': -1.1516050290083513},\n",
+       " {'m': 1.3055157442857488,\n",
+       "  'rss': 11018.259811215325,\n",
+       "  'slope': -0.6679309990431648},\n",
+       " {'m': 1.3055161316856536,\n",
+       "  'rss': 11018.259802961362,\n",
+       "  'slope': -0.38739990486647},\n",
+       " {'m': 1.3055163563775567,\n",
+       "  'rss': 11018.25979820296,\n",
+       "  'slope': -0.22469190298579633},\n",
+       " {'m': 1.3055164866989797,\n",
+       "  'rss': 11018.259795452783,\n",
+       "  'slope': -0.13032142305746675},\n",
+       " {'m': 1.30551656228532,\n",
+       "  'rss': 11018.259793860965,\n",
+       "  'slope': -0.07558634024462663},\n",
+       " {'m': 1.3055166061254566,\n",
+       "  'rss': 11018.259792938807,\n",
+       "  'slope': -0.043840136640938},\n",
+       " {'m': 1.3055166315528002,\n",
+       "  'rss': 11018.259792404311,\n",
+       "  'slope': -0.025427343643968925},\n",
+       " {'m': 1.3055166463005297,\n",
+       "  'rss': 11018.259792094435,\n",
+       "  'slope': -0.014747729437658563},\n",
+       " {'m': 1.3055166548542,\n",
+       "  'rss': 11018.259791914761,\n",
+       "  'slope': -0.008553670340916142},\n",
+       " {'m': 1.305516659815439,\n",
+       "  'rss': 11018.259791810555,\n",
+       "  'slope': -0.004961239028489217},\n",
+       " {'m': 1.305516662692953,\n",
+       "  'rss': 11018.25979175012,\n",
+       "  'slope': -0.0028775139071512967},\n",
+       " {'m': 1.3055166643619123,\n",
+       "  'rss': 11018.25979171507,\n",
+       "  'slope': -0.0016689591575413942},\n",
+       " {'m': 1.3055166653299057,\n",
+       "  'rss': 11018.259791694742,\n",
+       "  'slope': -0.000967993400990963},\n",
+       " {'m': 1.3055166658914459,\n",
+       "  'rss': 11018.25979168295,\n",
+       "  'slope': -0.0005615402187686414},\n",
+       " {'m': 1.305516666217045,\n",
+       "  'rss': 11018.259791676113,\n",
+       "  'slope': -0.0003255991032347083},\n",
+       " {'m': 1.3055166664059106,\n",
+       "  'rss': 11018.259791672144,\n",
+       "  'slope': -0.00018886566977016628},\n",
+       " {'m': 1.3055166665154136,\n",
+       "  'rss': 11018.259791669836,\n",
+       "  'slope': -0.00010950316209346056},\n",
+       " {'m': 1.3055166665788418,\n",
+       "  'rss': 11018.259791668504,\n",
+       "  'slope': -6.342816050164402e-05},\n",
+       " {'m': 1.3055166666156217,\n",
+       "  'rss': 11018.259791667731,\n",
+       "  'slope': -3.677996573969722e-05},\n",
+       " {'m': 1.3055166666370677,\n",
+       "  'rss': 11018.259791667282,\n",
+       "  'slope': -2.1445885067805648e-05},\n",
+       " {'m': 1.3055166666494005,\n",
+       "  'rss': 11018.259791667033,\n",
+       "  'slope': -1.2332748156040907e-05},\n",
+       " {'m': 1.3055166666566582,\n",
+       "  'rss': 11018.25979166688,\n",
+       "  'slope': -7.257767720147967e-06},\n",
+       " {'m': 1.3055166666608602,\n",
+       "  'rss': 11018.259791666793,\n",
+       "  'slope': -4.2018655221909285e-06},\n",
+       " {'m': 1.3055166666633158,\n",
+       "  'rss': 11018.25979166674,\n",
+       "  'slope': -2.4556356947869062e-06},\n",
+       " {'m': 1.3055166666647164,\n",
+       "  'rss': 11018.259791666711,\n",
+       "  'slope': -1.4006218407303095e-06},\n",
+       " {'m': 1.305516666665553,\n",
+       "  'rss': 11018.259791666693,\n",
+       "  'slope': -8.36735125631094e-07},\n",
+       " {'m': 1.305516666666026,\n",
+       "  'rss': 11018.259791666684,\n",
+       "  'slope': -4.729372449219227e-07},\n",
+       " {'m': 1.305516666666299,\n",
+       "  'rss': 11018.259791666676,\n",
+       "  'slope': -2.7284841053187847e-07},\n",
+       " {'m': 1.3055166666664262,\n",
+       "  'rss': 11018.259791666675,\n",
+       "  'slope': -1.2732925824820995e-07},\n",
+       " {'m': 1.3055166666665172,\n",
+       "  'rss': 11018.259791666673,\n",
+       "  'slope': -9.094947017729282e-08},\n",
+       " {'m': 1.3055166666665718,\n",
+       "  'rss': 11018.259791666673,\n",
+       "  'slope': -5.4569682106375694e-08},\n",
+       " {'m': 1.3055166666666265,\n",
+       "  'rss': 11018.259791666671,\n",
+       "  'slope': -5.4569682106375694e-08},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0},\n",
+       " {'m': 1.3055166666666265, 'rss': 11018.259791666671, 'slope': 0.0}]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
