Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -834,9 +834,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "c60c802c-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          275,
+          300,
+          700
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:0",
+         "type": "scatter",
+         "uid": "c60c818a-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          133.33,
+          133.33,
+          133.33
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:0.55",
+         "type": "scatter",
+         "uid": "c60c8248-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          188.16169999998064,
+          242.99339999996124,
+          352.6567999999225
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:0.87",
+         "type": "scatter",
+         "uid": "c60c82f2-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          219.96408600000547,
+          306.59817200001095,
+          479.86634400002185
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.05",
+         "type": "scatter",
+         "uid": "c60c8388-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          238.40946988004552,
+          343.48893976009106,
+          553.6478795201821
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.16",
+         "type": "scatter",
+         "uid": "c60c841e-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          249.1077925304181,
+          364.8855850608362,
+          596.4411701216724
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.22",
+         "type": "scatter",
+         "uid": "c60c84b4-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          255.312819667639,
+          377.295639335278,
+          621.261278670556
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.26",
+         "type": "scatter",
+         "uid": "c60c8540-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          258.9117354072278,
+          384.49347081445563,
+          635.6569416289112
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.28",
+         "type": "scatter",
+         "uid": "c60c85cc-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          260.9991065361975,
+          388.6682130723949,
+          644.0064261447898
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "m:1.29",
+         "type": "scatter",
+         "uid": "c60c8658-835d-11e9-81b8-116be6612965",
+         "x": [
+          100,
+          200,
+          400
+         ],
+         "y": [
+          262.2097817909945,
+          391.08956358198895,
+          648.8491271639779
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"32b6d5d3-73a4-48c3-82eb-f29d7f39db14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32b6d5d3-73a4-48c3-82eb-f29d7f39db14\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [100, 200, 400], \"y\": [275, 300, 700], \"type\": \"scatter\", \"uid\": \"c61c6154-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:0\", \"x\": [100, 200, 400], \"y\": [133.33, 133.33, 133.33], \"type\": \"scatter\", \"uid\": \"c61c62b2-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:0.55\", \"x\": [100, 200, 400], \"y\": [188.16169999998064, 242.99339999996124, 352.6567999999225], \"type\": \"scatter\", \"uid\": \"c61c6370-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:0.87\", \"x\": [100, 200, 400], \"y\": [219.96408600000547, 306.59817200001095, 479.86634400002185], \"type\": \"scatter\", \"uid\": \"c61c641a-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.05\", \"x\": [100, 200, 400], \"y\": [238.40946988004552, 343.48893976009106, 553.6478795201821], \"type\": \"scatter\", \"uid\": \"c61c64c4-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.16\", \"x\": [100, 200, 400], \"y\": [249.1077925304181, 364.8855850608362, 596.4411701216724], \"type\": \"scatter\", \"uid\": \"c61c655a-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.22\", \"x\": [100, 200, 400], \"y\": [255.312819667639, 377.295639335278, 621.261278670556], \"type\": \"scatter\", \"uid\": \"c61c65f0-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.26\", \"x\": [100, 200, 400], \"y\": [258.9117354072278, 384.49347081445563, 635.6569416289112], \"type\": \"scatter\", \"uid\": \"c61c6686-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.28\", \"x\": [100, 200, 400], \"y\": [260.9991065361975, 388.6682130723949, 644.0064261447898], \"type\": \"scatter\", \"uid\": \"c61c6712-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.29\", \"x\": [100, 200, 400], \"y\": [262.2097817909945, 391.08956358198895, 648.8491271639779], \"type\": \"scatter\", \"uid\": \"c61c67a8-835d-11e9-81b8-116be6612965\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"32b6d5d3-73a4-48c3-82eb-f29d7f39db14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"32b6d5d3-73a4-48c3-82eb-f29d7f39db14\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [100, 200, 400], \"y\": [275, 300, 700], \"type\": \"scatter\", \"uid\": \"c61c6154-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:0\", \"x\": [100, 200, 400], \"y\": [133.33, 133.33, 133.33], \"type\": \"scatter\", \"uid\": \"c61c62b2-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:0.55\", \"x\": [100, 200, 400], \"y\": [188.16169999998064, 242.99339999996124, 352.6567999999225], \"type\": \"scatter\", \"uid\": \"c61c6370-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:0.87\", \"x\": [100, 200, 400], \"y\": [219.96408600000547, 306.59817200001095, 479.86634400002185], \"type\": \"scatter\", \"uid\": \"c61c641a-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.05\", \"x\": [100, 200, 400], \"y\": [238.40946988004552, 343.48893976009106, 553.6478795201821], \"type\": \"scatter\", \"uid\": \"c61c64c4-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.16\", \"x\": [100, 200, 400], \"y\": [249.1077925304181, 364.8855850608362, 596.4411701216724], \"type\": \"scatter\", \"uid\": \"c61c655a-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.22\", \"x\": [100, 200, 400], \"y\": [255.312819667639, 377.295639335278, 621.261278670556], \"type\": \"scatter\", \"uid\": \"c61c65f0-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.26\", \"x\": [100, 200, 400], \"y\": [258.9117354072278, 384.49347081445563, 635.6569416289112], \"type\": \"scatter\", \"uid\": \"c61c6686-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.28\", \"x\": [100, 200, 400], \"y\": [260.9991065361975, 388.6682130723949, 644.0064261447898], \"type\": \"scatter\", \"uid\": \"c61c6712-835d-11e9-81b8-116be6612965\"}, {\"mode\": \"lines\", \"name\": \"m:1.29\", \"x\": [100, 200, 400], \"y\": [262.2097817909945, 391.08956358198895, 648.8491271639779], \"type\": \"scatter\", \"uid\": \"c61c67a8-835d-11e9-81b8-116be6612965\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from plotly.offline import iplot, init_notebook_mode\n",
     "from graph import plot, m_b_trace\n",
